--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -3,7 +3,7 @@
   if ost_home_page_jumbotron.present?
 %>
 
-<section class="container-jumbotron midnight-blue pt-6">
+<section class="container-jumbotron midnight-blue pt-6 pb-5">
   <div class="container pb-5 pb-lg-0">
     <div class="row align-items-center">
 
