--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -1,27 +1,15 @@
-<section class="container-jumbotron">
-  <div class="container-jumbotron denim-blue">
+<section class="container-jumbotron denim-blue">
+<!--  <div class="container-jumbotron">-->
     <div class="container">
-      <div class="row align-items-center skew-postive">
+      <div class="row align-items-center">
 
         <div class="col-md-12 col-lg-6 text-center">
-<!--          <div class="row align-items-center">-->
-<!--            <div class="col-4 col-lg-5">-->
-              <img class="img-fluid responsively-lazy push-bottom"
-                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
-                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
-                   srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-                   alt="OST - Liquidity Branded Token"
-                />
-<!--            </div>-->
-<!--            <div class="col-5 col-lg-6 pr-0">-->
-<!--              <img class="img-fluid responsively-lazy rotate-right"-->
-<!--                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-2.png"-->
-<!--                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-2.png"-->
-<!--                   srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
-<!--                   alt="OST - "-->
-<!--                />-->
-<!--            </div>-->
-<!--          </div>-->
+          <img class="img-fluid responsively-lazy"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
+               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+               alt="OST - Liquidity Branded Token"
+            />
         </div>
 
         <div class="col-10 col-md-8 col-lg-5 pt-4 pb-6 pt-lg-0 pb-lg-0 ml-auto ml-lg-auto mr-lg-auto">
@@ -34,7 +22,7 @@
 
       </div>
     </div>
-  </div>
+<!--  </div>-->
 </section>
 
 <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#438BAD" style="height: 5vw;width: 100%">
