--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -1,7 +1,7 @@
-<section class="container-jumbotron blue-bg">
-  <div class="container-jumbotron white-bg skew-negative">
+<section class="container-jumbotron py-6">
+<!--  <div class="container-jumbotron white-bg skew-negative">-->
     <div class="container">
-      <div class="row align-items-center skew-postive">
+      <div class="row align-items-center">
 
         <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Interoperability</h5>
@@ -14,7 +14,7 @@
         <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
 <!--          <div class="row align-items-end align-items-md-enter justify-content-end">-->
 <!--            <div class="col-4 col-lg-5">-->
-              <img class="img-fluid responsively-lazy rotate-left"
+              <img class="img-fluid responsively-lazy"
                    src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
                    data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
@@ -34,5 +34,5 @@
 
       </div>
     </div>
-  </div>
+<!--  </div>-->
 </section>
