--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -1,14 +1,14 @@
-<section class="container-jumbotron">
+<section class="container-jumbotron pb-6">
 <!--  <div class="container-jumbotron white-bg skew-negative">-->
     <div class="container">
-      <div class="row align-items-center skew-postive">
+      <div class="row align-items-center">
 
         <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
           <h5 class="header-title blue side-by-side">Deploy Your Brand Currency</h5>
           <p class="mt-3 desc blue">
             Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and to drive your engagement and growth metrics.
           </p>
-          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Deploy Your Brand Currency">Deploy Your Brand Currency</a>
+          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Deploy Your Brand Token">Deploy Your Brand Token</a>
         </div>
 
         <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
