--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -3,8 +3,9 @@
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-md-12 col-lg-6 text-center">
+        <div class="col-12 col-lg-6 text-center">
           <img class="img-fluid responsively-lazy"
+               style="max-width: 90%"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
@@ -12,19 +13,17 @@
             />
         </div>
 
-        <div class="col-10 col-md-8 col-lg-5 pt-4 pb-6 pt-lg-0 pb-lg-0 ml-auto ml-lg-auto mr-lg-auto">
-          <h5 class="header-title white side-by-side">Direct to Consumer</h5>
-          <p class="mt-3 desc white">
-            Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
-          </p>
-          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
+        <div class="col-12 col-lg-6">
+          <div class="px-2">
+            <h5 class="header-title white side-by-side">Direct to Consumer</h5>
+            <p class="mt-3 desc white">
+              Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
+            </p>
+            <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
+          </div>
         </div>
 
       </div>
     </div>
 <!--  </div>-->
 </section>
-
-<svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#438BAD" style="height: 5vw;width: 100%">
-  <polygon points="0,0 100,0 0,100"/>
-</svg>
