--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -14,7 +14,7 @@
         </div>
 
         <div class="col-12 col-lg-6">
-          <div class="px-2">
+          <div class="p-2">
             <h5 class="header-title white side-by-side">Direct to Consumer</h5>
             <p class="mt-3 desc white">
               Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
