--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -8,7 +8,7 @@
         <div class="col-12 col-md mb-3 mb-sm-0">
           <h6 class="text-uppercase">Products</h6>
           <ul class="footer-nav list-unstyled font-weight-normal">
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST KIT">OST KIT</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST Platform">OST Platform</a></li>
             <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" target="_blank" title="OST VIEW">OST VIEW</a></li>
             <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="OST KYC">OST KYC</a></li>
           </ul>
