--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -21,7 +21,7 @@
           <input type="checkbox" id="products">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler2">
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST - KIT">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST - Platform">
                 <svg class="ost-kit-brand-nav-menu" width="80" height="16">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kit-brand-nav-menu"></use>
