--- a/app/assets/stylesheets/web/ost/index/NewsCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/NewsCarousel.scss
@@ -1,5 +1,5 @@
 .events-news-carousel{
-  background-image: linear-gradient(to bottom, #ffffff, #f4f8f9);
+  //background-image: linear-gradient(to bottom, #ffffff, #f4f8f9);
 }
 .container-carousel{
   h1{
