--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -38,13 +38,18 @@ h1, h2, h3, h4, h5, h6{
   &.denim-blue{
     background: #fff;
     background-image: linear-gradient(-5deg, #fff 30%, #438BAD 30.1%);
-    @media (max-width: 769px) {
+    @media (max-width: map-get($grid-breakpoints, "lg") ){
       background: #438BAD;
       background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.1%);
     }
   }
-  &.fika-blue{
-    background: #27B9D2;
+  &.side-by-side-4-container{
+    background: #fff;
+    background-image: linear-gradient(-5deg, #fff 30%, #27B9D2 30.1%);
+    @media (max-width: map-get($grid-breakpoints, "lg") ){
+      background: #27B9D2;
+      background-image: linear-gradient(-5deg, #27B9D2 50%, #fff 50.1%);
+    }
   }
 
   .header-title{
@@ -299,4 +304,10 @@ h1, h2, h3, h4, h5, h6{
       width: 30px;
       vertical-align: middle;
     }
+}
+
+
+#partners {
+  background: #fff;
+  background-image: linear-gradient(2deg, #fff 10%, #34445b 10.1%);
 }
