--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,5 +1,5 @@
 <section class="container-fluid container-partners py-5" id="partners">
-  <div class="row">
+  <div class="row py-6 py-lg-0">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row align-items-center">
         <div class="col-12 d-block d-lg-none text-center">
