--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
+        <div class="col-12 col-lg-5 order-2 order-lg-1 mr-auto ml-lg-auto mr-lg-auto pl-4 pl-lg-0 pt-4">
           <h5 class="header-title blue side-by-side">Deploy Your Brand Currency</h5>
           <p class="mt-3 desc blue">
             Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and to drive your engagement and growth metrics.
@@ -11,7 +11,7 @@
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Deploy Your Brand Token">Deploy Your Brand Token</a>
         </div>
 
-        <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
+        <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2">
           <div class="row align-items-end align-items-md-enter justify-content-end">
 <!--            <div class="col-4 col-lg-5">-->
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-3@2x.png" class="img-fluid push-top"/>
