--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -1,9 +1,8 @@
-<section class="container-jumbotron denim-blue">
-<!--  <div class="container-jumbotron">-->
+<section class="container-jumbotron denim-blue pt-5 pt-lg-6">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row ">
 
-        <div class="col-12 col-lg-6 text-center">
+        <div class="col-12 col-lg-6 text-lg-center text-left">
           <img class="img-fluid responsively-lazy"
                style="max-width: 90%"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
@@ -13,8 +12,8 @@
             />
         </div>
 
-        <div class="col-12 col-lg-6">
-          <div class="p-2">
+        <div class="col-12 col-lg-6 pl-4 pl-lg-0">
+          <div class="px-2 mt-5 mt-lg-6 pb-5 pb-lg-0">
             <h5 class="header-title white side-by-side">Direct to Consumer</h5>
             <p class="mt-3 desc white">
               Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
@@ -25,5 +24,4 @@
 
       </div>
     </div>
-<!--  </div>-->
 </section>
