--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -1,9 +1,10 @@
-<section class="container-jumbotron py-6">
+<section class="container-jumbotron pb-0 pb-lg-6">
 <!--  <div class="container-jumbotron white-bg skew-negative">-->
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row" >
 
-        <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
+        <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto pl-4 pl-lg-0
+                    mr-lg-auto mt-5 mt-lg-6 pt-lg-6">
           <h5 class="header-title blue side-by-side">Interoperability</h5>
           <p class="mt-3 desc blue">
             Enable your users to easily swap your brand token within the OST Network. You decide which options to include. OST also enables you to earn fees on every redemption.
@@ -11,7 +12,7 @@
           <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
         </div>
 
-        <div class="col-md-12 col-lg-6 text-center order-1 order-lg-2">
+        <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2 side-by-side-3-img-wrap" >
 <!--          <div class="row align-items-end align-items-md-enter justify-content-end">-->
 <!--            <div class="col-4 col-lg-5">-->
               <img class="img-fluid responsively-lazy"
