--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -1,43 +1,25 @@
-<section class="container-jumbotron fika-blue">
-<!--  <div class="container-jumbotron blue-bg skew-negative">-->
+<section class="container-jumbotron pt-5 pt-lg-6 side-by-side-4-container" >
     <div class="container">
-      <div class="row align-items-center skew-postive">
+      <div class="row skew-postive">
 
-        <div class="col-md-12 col-lg-6 text-center">
-<!--          <div class="row align-items-end">-->
-<!--            <div class="col-4 col-lg-5">-->
+        <div class="col-12 col-lg-6 text-lg-center text-left">
               <img class="img-fluid responsively-lazy rotate-right"
                    src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-3@2x.png"
                    data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-3@2x.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                    alt="OST - "
                 />
-<!--            </div>-->
-<!--            <div class="col-5 col-lg-6 pr-0">-->
-<!--              <img class="img-fluid responsively-lazy rotate-right"-->
-<!--                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-mainstream-2.png"-->
-<!--                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-mainstream-2.png"-->
-<!--                   srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
-<!--                   alt="OST - "-->
-<!--                />-->
-<!--            </div>-->
-<!--          </div>-->
         </div>
 
-        <div class="col-10 col-md-8 col-lg-5 pt-4 pb-6 pt-lg-0 pb-lg-0 ml-auto ml-lg-auto mr-lg-auto">
-          <h5 class="header-title white side-by-side">User Friendly Design</h5>
-          <p class="mt-3 desc white">
-            OST Platform includes user friendly wallet solutions to enable users to safely hold and transact with your brand currency within your existing app.
-          </p>
-          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
+        <div class="col-12 col-lg-6 pl-4 pl-lg-0">
+            <div class="px-2 mt-5 pt-lg-6 mt-lg-6 pb-5 pb-lg-0">
+              <h5 class="header-title white side-by-side">User Friendly Design</h5>
+              <p class="mt-3 desc white">
+                OST Platform includes user friendly wallet solutions to enable users to safely hold and transact with your brand currency within your existing app.
+              </p>
+              <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
+          </div>
         </div>
-
       </div>
     </div>
-<!--  </div>-->
-
 </section>
-
-<svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#27B9D2" style="height: 5vw;width: 100%">
-  <polygon points="0,0 100,100 100,0"/>
-</svg>
