--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -1,9 +1,10 @@
-<section class="container-jumbotron py-6">
+<section class="container-jumbotron py-4">
 <!--  <div class="container-jumbotron white-bg">-->
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-10 col-md-8 col-lg-5 order-2 order-lg-1 pb-5 pb-lg-0 mr-auto ml-lg-auto mr-lg-auto">
+        <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto pl-4 pl-lg-0
+                    mr-lg-auto mt-4 mt-lg-0">
           <h5 class="header-title blue side-by-side">Seamless Integration</h5>
           <p class="mt-3 desc blue">
             OST Platform provides everything you need to test, integrate, and deploy your brand currency. Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on your business and leave the blockchain bits to us.
