--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -1,7 +1,9 @@
-<section class="container-jumbotron denim-blue pt-5 pt-lg-6">
+<section class="container-jumbotron denim-blue pt-5 pt-lg-6 position-relative">
     <div class="container">
       <div class="row ">
-
+        <div class="position-absolute d-none d-lg-block" style="top: 45%;left: 39%;transform: rotate(-10deg);height: 100%;max-width: 360px;" >
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-dots-bg@2x.png" class="img-fluid" />
+        </div>
         <div class="col-12 col-lg-6 text-lg-center text-left">
           <img class="img-fluid responsively-lazy"
                style="max-width: 90%"
