--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -1,6 +1,10 @@
-<section class="container-jumbotron pt-5 pt-lg-6 side-by-side-4-container" >
+<section class="container-jumbotron pt-5 pt-lg-6 side-by-side-4-container position-relative" >
     <div class="container">
       <div class="row skew-postive">
+
+        <div class="position-absolute d-none d-lg-block" style="top: 42%;left: 39%;transform: rotate(10deg);height: 100%;max-width: 360px;" >
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-dots-bg@2x.png" class="img-fluid" />
+        </div>
 
         <div class="col-12 col-lg-6 text-lg-center text-left">
               <img class="img-fluid responsively-lazy rotate-right"
