--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,6 +1,7 @@
-<section class="container container-partners py-5" id="partners">
-  <div class="row py-6 py-lg-0">
-    <div class="col col-lg-10 col-xl-9 mx-md-auto">
+<section class="container-fluid container-partners pt-4 pt-lg-6 pb-6" id="partners">
+  <div class="container pb-6">
+    <div class="row py-6 py-lg-0">
+    <div class="col-12">
       <div class="row align-items-center">
         <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-title white">OST Partners</h2>
@@ -74,5 +75,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </section>
