--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -16,11 +16,11 @@
 
         <div class="col-12 col-lg-6 pl-4 pl-lg-0">
           <div class="px-2 mt-5 mt-lg-6 pb-5 pb-lg-0">
-            <h5 class="header-title white side-by-side">Direct to Consumer</h5>
+            <h5 class="header-title white side-by-side text-capitalize">Direct to Consumer</h5>
             <p class="mt-3 desc white">
               Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
             </p>
-            <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
+            <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
           </div>
         </div>
 
