--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -5,32 +5,20 @@
 
         <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto pl-4 pl-lg-0
                     mr-lg-auto mt-5 mt-lg-6 pt-lg-6">
-          <h5 class="header-title blue side-by-side">Interoperability</h5>
+          <h5 class="header-title blue side-by-side text-capitalize">Interoperability</h5>
           <p class="mt-3 desc blue">
             Enable your users to easily swap your brand token within the OST Network. You decide which options to include. OST also enables you to earn fees on every redemption.
           </p>
-          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
         </div>
 
         <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2 side-by-side-3-img-wrap" >
-<!--          <div class="row align-items-end align-items-md-enter justify-content-end">-->
-<!--            <div class="col-4 col-lg-5">-->
               <img class="img-fluid responsively-lazy"
                    src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
                    data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                    alt="OST - "
                 />
-<!--            </div>-->
-<!--            <div class="col-5 col-lg-6 pl-0">-->
-<!--              <img class="img-fluid responsively-lazy rotate-left"-->
-<!--                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-2.png"-->
-<!--                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-2.png"-->
-<!--                   srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
-<!--                   alt="OST - "-->
-<!--                />-->
-<!--            </div>-->
-<!--          </div>-->
         </div>
 
       </div>
