--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -17,11 +17,11 @@
 
         <div class="col-12 col-lg-6 pl-4 pl-lg-0">
             <div class="px-2 mt-5 pt-lg-6 mt-lg-6 pb-5 pb-lg-0">
-              <h5 class="header-title white side-by-side">User Friendly Design</h5>
+              <h5 class="header-title white side-by-side text-capitalize">User Friendly Design</h5>
               <p class="mt-3 desc white">
                 OST Platform includes user friendly wallet solutions to enable users to safely hold and transact with your brand currency within your existing app.
               </p>
-              <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
           </div>
         </div>
       </div>
