--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -58,7 +58,7 @@
           </a>
           <ul class="dropdown-menu mega-dropdown-menu">
             <li>
-              <a href="https://dev.ost.com" target="_blank" class="nav-svg-link d-flex" title="API Reference">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" class="nav-svg-link d-flex" title="API Reference">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
