--- a/app/views/web/ost/index/_openst_technology.erb
+++ b/app/views/web/ost/index/_openst_technology.erb
@@ -43,7 +43,7 @@
           <h5>Empowering Developers</h5>
           <p>OpenST and OST KIT provide robust RESTful APIs to integrate advanced blockchain functionality with ease while observing the highest security standards. Or, use SDKs to get started even faster. Identity solutions allow the application to know their customer and calculate the correct taxes on services delivered.</p>
           <p>Universal wallets will allow users to seamlessly manage their funds and keys and to transact across token economies. Branded, embedded wallets will allow users within one economy to view their transactions and balance history. We invite developers to connect with us and to follow our documentation, guides, and recipes that make building any blockchain experience simple and easy.</p>
-          <a href="https://dev.ost.com" class="text-link" target="_blank" title="Explore Developer Resources">Explore Developer Resources</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" target="_blank" title="Explore Developer Resources">Explore Developer Resources</a>
         </div>
       </div>
     </div>
