--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -16,7 +16,7 @@
         <div class="col-12 col-md mb-3 mb-sm-0">
           <h6 class="text-uppercase">Developers</h6>
           <ul class="footer-nav list-unstyled">
-            <li><a href="https://dev.ost.com" target="_blank" title="API Reference">API Reference</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" title="API Reference">API Reference</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>challenges" title="Dev Challenges">Dev Challenges</a></li>
             <li><a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" title="OpenSt Protocol">OpenST Protocol Whitepaper</a></li>
             <li><a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" title="Mosaic Protocol">Mosaic Protocol Whitepaper</a></li>
