--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -5,7 +5,7 @@
       <p>OST KIT provides all the tools needed to run your Branded Token economy. Use our robust RESTful APIs and SDKs to integrate advanced blockchain functionality with ease while observing the highest security standards. Our user-friendly dashboards help you manage, automate, and optimize your economy.</p>
       <div class="mt-4 text-center text-md-left">
         <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="DISCOVER OST KIT">DISCOVER OST KIT</a>
-        <a href="https://dev.ost.com/" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3 d-none d-md-inline-block" title="DEV RESOURCES" target="_blank">DEV RESOURCES</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3 d-none d-md-inline-block" title="DEV RESOURCES" target="_blank">DEV RESOURCES</a>
       </div>
     </div>
     <div class="col col-lg-6 col-xl-6 p-md-0 d-none d-md-block">
@@ -34,7 +34,7 @@
               <p class="my-2">OST KIT provides RESTful APIs and SDKs to help you easily set up and integrate your token economy into your existing app, enabling you to integrate and test Branded Tokens with minimal effort.</p>
             </div>
             <div>
-              <a href="https://dev.ost.com/" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
@@ -52,7 +52,7 @@
               <p class="my-2">OST makes it easy to design and test your blockchain-enabled app with documentation and sample code for Ruby, JavaScript, PHP, and Java as well as framework code for wallets and third-party payment processors.</p>
             </div>
             <div>
-              <a href="https://dev.ost.com/docs/sdks_overview.html" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/sdks_overview.html" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
