--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -4,11 +4,12 @@
 
         <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto pl-4 pl-lg-0
                     mr-lg-auto mt-4 mt-lg-0">
-          <h5 class="header-title blue side-by-side">Seamless Integration</h5>
+          <h5 class="header-title blue side-by-side text-capitalize">Seamless Integration</h5>
           <p class="mt-3 desc blue">
             OST Platform provides everything you need to test, integrate, and deploy your brand currency. Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on your business and leave the blockchain bits to us.
           </p>
-          <a href="javascript:alert('URL yet to be provide!')" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
+
         </div>
 
         <div class="col-md-12 col-lg-7 text-center order-1 order-lg-2 pt-6 pt-lg-0">
