--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto ml-lg-auto pl-4 pl-lg-0
+        <div class="col-12 col-lg-4 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto
                     mr-lg-auto mt-4 mt-lg-0">
           <h5 class="header-title blue side-by-side text-capitalize">Seamless Integration</h5>
           <p class="mt-3 desc blue">
@@ -12,7 +12,7 @@
 
         </div>
 
-        <div class="col-md-12 col-lg-7 text-center order-1 order-lg-2 pt-6 pt-lg-0">
+        <div class="col-md-12 col-lg-8 text-center order-1 order-lg-2 pt-6 pt-lg-0">
           <img class="img-fluid responsively-lazy rotate-left"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-3@2x.png"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-3@2x.png"
