--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-12 col-lg-5 order-2 order-lg-1 mr-auto ml-lg-auto mr-lg-auto pl-4 pl-lg-0 pt-4">
+        <div class="col-12 col-lg-5 order-2 order-lg-1 mr-auto pt-4">
           <h5 class="header-title blue side-by-side text-capitalize">Deploy Your Brand Currency</h5>
           <p class="mt-3 desc blue">
             Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and to drive your engagement and growth metrics.
