images + styling changes

--- a/app/assets/stylesheets/web/common/_news.scss
+++ b/app/assets/stylesheets/web/common/_news.scss
@@ -40,7 +40,7 @@
     .carousel-description , .carousel-title {
       text-align: left;
       font-weight: 500;
-      padding: 0 10px 10px;
+      padding: 10px 10px 10px;
     }
 
     .carousel-title {
