--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -4,7 +4,7 @@
     <div class="col-12">
       <div class="row align-items-center">
         <div class="col-12 d-block d-lg-none text-center">
-          <h2 class="header-title white">OST Partners</h2>
+          <h2 class="header-title white font-weight-normal">OST Partners</h2>
           <p>Billions of in-app transactions connecting hundreds of millions of users</p>
           <div class="play-video" id="partner-video-mobile">
             <div class="video-image">
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
-            <h2 class="header-blue-900 mb-3">OST Partners</h2>
+            <h2 class="header-blue-900 mb-3 font-weight-normal">OST Partners</h2>
             <p>Billions of App Actions<br/> Connecting Hundreds Of Millions Of Users</p>
           </div>
           <div class="row partners-companies mt-3">
