--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -6,8 +6,8 @@
         </div>
         <div class="col-12 col-lg-6 text-lg-center text-left">
           <img class="img-fluid responsively-lazy"
-               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
-               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-3@2x.png"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-new.png"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-new.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                alt="OST - Liquidity Branded Token"
             />
