--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -13,8 +13,8 @@
 
         <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2 side-by-side-3-img-wrap" >
               <img class="img-fluid responsively-lazy"
-                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
-                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-3@2x.png"
+                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-new.png"
+                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-new.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                    alt="OST - "
                 />
