--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -8,8 +8,8 @@
 
         <div class="col-12 col-lg-6 text-lg-center text-left">
               <img class="img-fluid responsively-lazy rotate-right"
-                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-3@2x.png"
-                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-3@2x.png"
+                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-new.png"
+                   data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-new.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                    alt="OST - "
                 />
