navbar and metadata

--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -1,7 +1,7 @@
 <nav id="menu" class="ost-nav w-100">
   <div class="container nav-container">
     <div class="row align-items-center">
-      <a class="navbar-brand ost-brand mr-0" href="<%= GlobalConstant::Base.root_url %>" title="OST" style="font-size: 0">
+      <a class="navbar-brand ost-brand mr-0" href="<%= GlobalConstant::Base.root_url %>" title="OST">
         <svg class="ost-nav-logo">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-logo"></use>
@@ -14,51 +14,52 @@
       <input type="checkbox" id="tm">
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
 
-        <li><a href="javascript:void(0)" class="main-nav-item">Products
-          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="products" data-toggle="collapse" data-target="#navbarToggler2" aria-controls="navbarToggler2" aria-expanded="false" aria-label="Toggle navigation"></label>
+        <li>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Product">Product
+          <label title="Toggle Drop-down" class="navbar-toggler p-0 m-0" for="products" data-toggle="collapse" data-target="#navbarToggler2" aria-controls="navbarToggler2" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="products">
-          <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler2">
-            <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST - Platform">
-                <svg class="ost-kit-brand-nav-menu" width="80" height="16">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kit-brand-nav-menu"></use>
-                  </switch>
-                </svg>
-                Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
-              </a>
-            </li>
-            <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" title="OST - VIEW" target="_blank">
-                <svg class="ost-kit-brand-nav-menu" width="86" height="16">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>
-                  </switch>
-                </svg>
-                View and analyze transactions across the OpenST side blockchains for a macro view of the OpenST ecosystem.
-              </a>
-            </li>
-            <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="OST - KYC">
-                <svg class="ost-kyc-brand-nav-menu" width="80" height="16">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kyc-brand-nav-menu"></use>
-                  </switch>
-                </svg>
-                The one place for your team to quickly review and process the KYC applications.
-              </a>
-            </li>
-          </ul>
+<!--          <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler2">-->
+<!--            <li>-->
+<!--              <a href="<%#= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST - Platform">-->
+<!--                <svg class="ost-kit-brand-nav-menu" width="80" height="16">-->
+<!--                  <switch>-->
+<!--                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kit-brand-nav-menu"></use>-->
+<!--                  </switch>-->
+<!--                </svg>-->
+<!--                Launch your own Branded Tokens and turn your business into a dynamic ecosystem.-->
+<!--              </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="<%#= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" title="OST - VIEW" target="_blank">-->
+<!--                <svg class="ost-kit-brand-nav-menu" width="86" height="16">-->
+<!--                  <switch>-->
+<!--                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>-->
+<!--                  </switch>-->
+<!--                </svg>-->
+<!--                View and analyze transactions across the OpenST side blockchains for a macro view of the OpenST ecosystem.-->
+<!--              </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="<%#= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="OST - KYC">-->
+<!--                <svg class="ost-kyc-brand-nav-menu" width="80" height="16">-->
+<!--                  <switch>-->
+<!--                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kyc-brand-nav-menu"></use>-->
+<!--                  </switch>-->
+<!--                </svg>-->
+<!--                The one place for your team to quickly review and process the KYC applications.-->
+<!--              </a>-->
+<!--            </li>-->
+<!--          </ul>-->
         </li>
 
         <li><a href="javascript:void(0)" class="main-nav-item">Developers
-          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
+          <label title="Toggle Drop-down" class="navbar-toggler p-0 m-0" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="developers">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler3">
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
+              <a href="https://dev.ost.com" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
@@ -164,7 +165,7 @@
 
 
         <li><a href="javascript:void(0)" class="main-nav-item">Company
-          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="company" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
+          <label title="Toggle Drop-down" class="navbar-toggler p-0 m-0" for="company" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="company">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler5">
