open intro video in modal

--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -19,5 +19,5 @@
 <%#= render :partial => "/web/ost/index/buy_ost" %>
 
 <!-- # Shared  / referenced assets / HTML elements / Modals etc. -->
-<%#= render :partial => "/shared/web/modals/help_video" %>
+<%= render :partial => "/shared/web/modals/help_video" %>
 <%#= render :partial => "/web/ost/roadmap/roadmap_svg_sprite" %>
