--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -17,7 +17,7 @@
           <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
         </p>
         <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
-          <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
+          <button class="btn btn-primary my-2 my-md-3" title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></button>
         <% end %>
         <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
           <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary openst-forum my-2 ml-sm-3" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
