--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -5,7 +5,7 @@
           <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-dots-bg@2x.png" class="img-fluid" />
         </div>
         <div class="col-12 col-lg-6 text-lg-center text-left">
-          <img class="img-fluid responsively-lazy"
+          <img class="img-fluid responsively-lazy ost-home-web-img "
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-new.png"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-new.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
