--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -13,7 +13,7 @@
         </div>
 
         <div class="col-md-12 col-lg-8 text-center order-1 order-lg-2 pt-6 pt-lg-0">
-          <img class="img-fluid responsively-lazy rotate-left"
+          <img class="img-fluid responsively-lazy rotate-left ost-home-web-img"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-new.png"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-new.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
