--- a/app/assets/stylesheets/web/common/_footer.scss
+++ b/app/assets/stylesheets/web/common/_footer.scss
@@ -44,4 +44,11 @@
       display: inline-block;
     }
   }
+  .svg-edge{
+    width: 100%;
+    height: 10vw;
+    @media only screen and (min-width: 992px){
+      height: 5vw;
+    }
+  }
 }
