--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid footer-nav-wrap position-relative" style="overflow: hidden">
   <div class="row">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" style="width: 100%;height: 10vw;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
       <polygon fill="#ffffff" points="0,0 100,0 0,100"></polygon>
     </svg>
     <div class="container">
