adding alt tags for the images

--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -13,7 +13,8 @@
 
         <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2">
           <div class="row align-items-end align-items-md-enter justify-content-end">
-              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new.png" class="img-fluid push-top ost-home-web-img "/>
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new.png" class="img-fluid push-top ost-home-web-img"
+                   alt="OST - Deploy Your Brand Currency"/>
           </div>
         </div>
 
