--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -11,7 +11,7 @@
                    src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-new.png"
                    data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-user-friendly-new.png"
                    srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-                   alt="OST - "
+                   alt="OST - Seamless Experience Within Your App"
                 />
         </div>
 
