--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -27,7 +27,7 @@
                     </label>
                     <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
                   </div>
-                  <button type="submit" title = "sign up" class="btn btn-primary px-5" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
+                  <button type="submit" title="Sign Up" class="btn btn-primary px-5" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
                   <div class="error general_error"></div>
                 </div>
               </div>
