--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -9,7 +9,7 @@
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-new.png"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-direct-new.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-               alt="OST - Liquidity Branded Token"
+               alt="OST - Direct to Consumer"
             />
         </div>
 
