--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -13,7 +13,7 @@
                  src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-new.png"
                  data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-new.png"
                  srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-                 alt="OST - "
+                 alt="OST - Interoperability"
               />
       </div>
 
