--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -17,7 +17,7 @@
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-new.png"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-seamless-integration-new.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-               alt="OST - "
+               alt="OST - No In-House  Blockchain Code Required"
             />
         </div>
 
