--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -15,10 +15,7 @@
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
 
         <li>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Product">Product
-          <label title="Toggle Drop-down" class="navbar-toggler p-0 m-0" for="products" data-toggle="collapse" data-target="#navbarToggler2" aria-controls="navbarToggler2" aria-expanded="false" aria-label="Toggle navigation"></label>
-        </a>
-          <input type="checkbox" id="products">
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Product">Product</a>
         </li>
 
         <li><a href="javascript:void(0)" class="main-nav-item">Developers
