fix for roadmap bg

--- a/app/views/web/ost/partners/_contact_us.erb
+++ b/app/views/web/ost/partners/_contact_us.erb
@@ -82,6 +82,14 @@
   </div>
 </section>
 
+<section class="container-fluid">
+  <div class="row">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
+      <polygon fill="#f4f8f9" points="0,100 100,0 100,100"></polygon>
+    </svg>
+  </div>
+</section>
+
 <% content_for :head_js do %>
 <script src="https://www.google.com/recaptcha/api.js"></script>
 <%end%>
