--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -4,7 +4,7 @@
 $background-color : #f2f8f8 ;
 
 body{
-  //background-color: $background-color;
+  background-color: $background-color;
 }
 
 .jumbotron-container{
