Roadmap Updates by Ignas

--- a/app/views/web/ost/index/_mobile_roadmap.erb
+++ b/app/views/web/ost/index/_mobile_roadmap.erb
@@ -43,7 +43,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-btx-exchange"></use>
             </switch>
             </svg>
-            BT EXCHANGE
+            OST Network
           </label>
         </span>
       </div>
