--- a/app/views/web/ost/roadmap/desktop/_2020-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q1.erb
@@ -15,6 +15,7 @@
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold">OST OPTIMIZATION</div>
+        <div class="text-bold">OST KYC Integration</div>
         <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
       </div>
     </div>
