--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -36,7 +36,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
-  desc_html: '<span class="text-bold">OST KIT Beta Availability for mainstream businesses.</span>'
+  desc_html: '<span class="text-bold">OST Platform Deployment to Mainstream Businesses</span>'
 } %>
 
 <div class="row">
