--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -134,12 +134,10 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST KIT Beta Security Audit</div>
+      <div class="text-bold">OST Platform Security Audit</div>
+      <div class="text-bold">OST Platform</div>
+      <div class="text-bold">OST Wallet SDK</div>
       <div class="status">Status: <%= get_current_quater_roadmap_status(2018, 1) %></div>
-      <ul class="desc-lines">
-        <li>Wallet SDK</li>
-        <li>Scalability & Performance</li>
-      </ul>
     </div>
   </div>
 </div>
@@ -150,16 +148,15 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
-  desc_html: '<span class="text-bold">OST KIT Beta Availability for mainstream businesses.</span>'
+  desc_html: '<span class="text-bold">OST Platform Deployment to Mainstream Businesses</span>'
 } %>
 
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST KIT Beta</div>
-      <div class="text-bold">OST Wallet SDK</div>
-      <div class="text-bold">OST KYC Integration</div>
-      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
+      <div class="text-bold">Scalability & Performance</div>
+      <div class="status">Status: In Progress</div>
+<!--      <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
     </div>
   </div>
 </div>
@@ -175,10 +172,9 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST KIT Release</div>
       <div class="text-bold">OST UNIVERSAL WALLET</div>
       <div class="text-bold">OST STABLE</div>
-      <div class="text-bold">OST KIT NFT</div>
+      <div class="text-bold">OST Platform NFT</div>
       <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 3) %></div>
     </div>
   </div>
@@ -217,6 +213,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OST OPTIMIZATION</div>
+      <div class="text-bold">OST KYC Integration</div>
       <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
     </div>
   </div>
