--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -203,7 +203,7 @@
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Alpha</div>
-      <div class="status">Status: <%= get_current_quater_roadmap_status(2018, 1) %></div>
+      <div class="status">Status: In Progress</div>
     </div>
   </div>
 </div>
@@ -213,14 +213,21 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q2',
-  desc_html: '<span class="text-bold">OST KIT Beta Availability for mainstream businesses.</span>'
+  desc_html: '<span class="text-bold">OST Platform Deployment to Mainstream Businesses</span>'
 } %>
 
 <div class="row">
-  <div class="col-12 bg-line first pt-5 mx-auto">
+  <div class="col-6 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.10</div>
-      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
+      <div class="status">Status: In Progress</div>
+<!--      <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
+    </div>
+  </div>
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Mosaic Alpha</div>
+      <div class="status">Status: In Progress</div>
     </div>
   </div>
 </div>
