Roadmap and Documents pages Updates by Ignas

--- a/app/views/web/ost/roadmap/desktop/_2019-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q3.erb
@@ -3,7 +3,7 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q3',
-    desc_html: '<span class="text-bold">OST KIT General Availability for mainstream businesses, with BTEX beta.'
+    desc_html: '<span class="text-bold">OST Platform General Availability for mainstream businesses, with OST Network beta.</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
