--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -237,7 +237,7 @@
 <%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
   year: '2019',
   quarter: 'Q3',
-  desc_html: '<span class="text-bold">OST KIT General Availability for mainstream businesses, with BTEX beta.</span>'
+  desc_html: '<span class="text-bold">OST Platform General Availability for mainstream businesses, with OST Network beta.</span>'
 } %>
 
 <div class="row">
