--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -3,9 +3,10 @@
   if ost_home_page_jumbotron.present?
 %>
 
-<section class="container-jumbotron midnight-blue pt-6 pb-5 position-relative">
-  <div class="container pb-5 pb-lg-0">
-    <div class="row align-items-center ">
+<section class="container-jumbotron midnight-blue py-6 position-relative side-by-side-1-wrapper">
+
+  <div class="container pb-5 pb-lg-6 content-z-index">
+    <div class="row align-items-center pb-lg-4">
 
       <div class="position-absolute d-none d-lg-block" style="top: 20%;left: 39%;transform: rotate(-10deg);height: 100%;max-width: 360px;" >
         <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-dots-bg@2x.png" class="img-fluid" />
@@ -26,10 +27,10 @@
 
     </div>
   </div>
+
+  <div class="polygon-1 d-none d-lg-block"></div>
+  <div class="polygon-2 d-none d-lg-block"></div>
 </section>
 
 <%end%>
 
-<svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 5vw;width: 100%">
-  <polygon points="0,0 100,0 0,100"/>
-</svg>
