--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -1,6 +1,6 @@
-<section class="container-jumbotron pb-6">
+<section class="container-jumbotron pb-6 position-relative">
 <!--  <div class="container-jumbotron white-bg skew-negative">-->
-    <div class="container">
+    <div class="container content-z-index">
       <div class="row align-items-center">
 
         <div class="col-12 col-lg-5 order-2 order-lg-1 mr-auto pt-4">
