--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -1,5 +1,5 @@
-<section class="container-jumbotron pb-0 pb-lg-6">
-  <div class="container">
+<section class="container-jumbotron pb-0 pb-lg-6 position-relative">
+  <div class="container content-z-index">
     <div class="row" >
       <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto mt-5 mt-lg-6 pt-lg-6">
         <h5 class="header-title blue side-by-side text-capitalize">Interoperability</h5>
