--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -1,5 +1,5 @@
-<section class="container-jumbotron denim-blue pt-5 pt-lg-6 position-relative">
-    <div class="container">
+<section class="container-jumbotron denim-blue pt-5 pt-lg-6 position-relative side-by-side-2-wrapper">
+    <div class="container content-z-index" >
       <div class="row ">
         <div class="position-absolute d-none d-lg-block" style="top: 45%;left: 39%;transform: rotate(-10deg);height: 100%;max-width: 360px;" >
           <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-dots-bg@2x.png" class="img-fluid" />
@@ -25,4 +25,7 @@
 
       </div>
     </div>
+
+  <div class="polygon-3 d-none d-lg-block"></div>
+  <div class="polygon-4 d-none d-lg-block"></div>
 </section>
